name:                   dht-dks
version:                0.1.0.0
synopsis:               DHT implementation based on Distributed k-ary System (DKS)
-- description:
homepage:               https://github.com/FPBrno/dht-dks
license:                BSD3
license-file:           LICENSE
author:                 Jan Šipr, Matej Kollár, Peter Trško
maintainer:             peter.trsko@gmail.com
copyright:              (c) 2015 Jan Šipr, Matej Kollár; 2015-2016 Peter Trško
category:               Data
build-type:             Simple
cabal-version:          >=1.10

extra-source-files:     ChangeLog.md, README.md

flag pedantic
  description:          Pass additional warning flags to GHC.
  default:              False
  manual:               True

library
  hs-source-dirs:       src
  exposed-modules:
      Data.DHT.DKS
    , Data.DHT.DKS.Internal
    , Data.DHT.DKS.Internal.Monad
    , Data.DHT.DKS.Internal.Operation
    , Data.DHT.DKS.Type.EVar
    , Data.DHT.DKS.Type.Hash
    , Data.DHT.DKS.Type.Message
    , Data.DHT.DKS.Type.Message.GrantLeave
    , Data.DHT.DKS.Type.Message.JoinDone
    , Data.DHT.DKS.Type.Message.JoinPoint
    , Data.DHT.DKS.Type.Message.JoinRequest
    , Data.DHT.DKS.Type.Message.JoinRetry
    , Data.DHT.DKS.Type.Message.LeaveDone
    , Data.DHT.DKS.Type.Message.LeavePoint
    , Data.DHT.DKS.Type.Message.LeaveRequest
    , Data.DHT.DKS.Type.Message.LeaveRetry
    , Data.DHT.DKS.Type.Message.NewSuccessor
    , Data.DHT.DKS.Type.Message.NewSuccessorAck
    , Data.DHT.DKS.Type.Message.UpdateSuccessor
    , Data.DHT.DKS.Type.Message.UpdateSuccessorAck
    , Data.DHT.DKS.Type.MessageChannel
    , Data.DHT.DKS.Type.Params
    , Data.DHT.DKS.Type.State
    , Data.DHT.DKS.Type.Storage

  -- other-modules:

  default-language:     Haskell2010
  other-extensions:
      DeriveDataTypeable
    , DeriveGeneric
    , NamedFieldPuns
    , NoImplicitPrelude

  build-depends:
      base >=4.6 && <4.9

    , byteable ==0.1.*
    , bytestring ==0.10.*
    , cryptohash ==0.10.* || ==0.11.*
    , data-default-class ==0.0.*
    , endo ==0.3.*
    , hashable >=1.0.1.1 && <1.3
    -- ^ Constraint taken from unordered-containers ==0.2.7.0.
    , memory >=0.8 && <1
    , mtl ==2.*
    , stm ==2.4.*
    , text >=1.1 && <2
    , unagi-chan ==0.4.*
    , unordered-containers ==0.2.*
    , overloaded-records >=0.4.1.0 && <1

    , logstr
    , lumberjack-core
    , lumberjack-fast-logger

    , dht-api ==0.1.*

  ghc-options:          -Wall -fwarn-tabs

  if impl(ghc <8)
    -- Control.Monad.IO.Class
    build-depends:      transformers

  if flag(pedantic)
    ghc-options:
      -fwarn-implicit-prelude
      -fwarn-missing-import-lists
--    -Werror

test-suite unit-tests
  hs-source-dirs:       src, test
  type:                 exitcode-stdio-1.0
  main-is:              unit-tests.hs
  other-modules:
      TestCase
    , TestCase.Data.DHT.DKS
    , TestCase.Data.DHT.DKS.StateMachine

  default-language:     Haskell2010
  other-extensions:
      DeriveDataTypeable
    , DeriveGeneric
    , NamedFieldPuns
    , NoImplicitPrelude

  build-depends:
    -- {{{ Dependencies of library --------------------------------------------
      base >=4.6 && <4.9
    , data-default-class ==0.0.*
    , unordered-containers ==0.2.*

    , dht-api ==0.1.*
    -- }}} Dependencies of library --------------------------------------------

    -- {{{ Test-suite dependencies --------------------------------------------
    , HUnit >=1.2 && <2
      -- ^ Same constraints as test-framework-hunit
    , QuickCheck >=2.6 && <2.9
    , test-framework >=0.8 && <1
      -- ^ Same constraint as test-framework-skip, other packages that
      -- depend on it have less restrictive bounds.
    , test-framework-hunit >=0.2.6 && <1
      -- ^ Lower versions have more restrictive bounds on test-framework.
    , test-framework-quickcheck2 >=0.3
      -- ^ There were changes in QuickCheck bounds in 0.2 branch and last one
      -- on it had a compilation failure on Hackage.
    -- }}} Test-suite dependencies --------------------------------------------

  ghc-options:          -Wall -fwarn-tabs

  if flag(pedantic)
    ghc-options:
      -fwarn-implicit-prelude
      -fwarn-missing-import-lists
--    -Werror

source-repository head
  type:                 git
  location:             git@github.com:FPBrno/dht-dks.git
